postgresql-common (191) UNRELEASED; urgency=medium

  * t/170_extensions.t: Add dependencies of jsonb_pl{perl,python}.

 -- Christoph Berg <myon@debian.org>  Fri, 30 Mar 2018 18:16:37 +0200

postgresql-common (190) unstable; urgency=medium

  * Move packaging repository to salsa.debian.org
  * pg_lsclusters: Add --help.
  * pg_virtualenv: Error out if no server packages are installed.
  * postgresql-common recommends e2fsprogs, we are using chattr in
    pg_createcluster. (Closes: #887251)
  * PgCommon.pm: Fix include directives parser, spotted by ironhalik, thanks!
  * postgresql@.service: Set Timeoutstart=0, which is the same as infinity,
    but works on older systemd versions as well.
  * Rewrite architecture.html as README.md.
  * t/006_next_free_port.t: Drop -q argument from netcat, nmap-ncat.rpm
    doesn't have it.
  * t/032_ssl_key_permissions.t: Adjust for 9.4 in oldstable which still has
    the old permissions check.

 -- Christoph Berg <christoph.berg@credativ.de>  Thu, 08 Feb 2018 13:26:44 +0100

postgresql-common (189) unstable; urgency=medium

  [ Chris Lamb ]
  * Update README.Debian for postgresql-10. (Closes: #876438)

  [ Christoph Berg ]
  * dh_make_pgxs: Use PostgreSQL license as default, fix extension name.
  * Modernize README.Debian's version numbers and SSL instructions.
  * postgresql@.service: Ignore startup failure, recovery might take
    arbitrarily long to finish. The actual service status still correctly
    reflects if the postmaster process is running.
    https://www.postgresql.org/message-id/20171111205316.u56lkmkakdmcx6zm%40msg.df7cb.de
  * supported-versions: Version 10 on Ubuntu 18.04 (bionic). (Closes: #881501)
  * debian/maintscripts-functions: bump update-alternatives priority of
    version 1x to 1x0.
  * Unsupport 9.2 on apt.postgresql.org.
  * t/140_pg_config.t: Also test /usr/bin/pg_config.libpq-dev, and check
    MKDIR_P and abs_top_build/srcdir in Makefile.global.
