@@ -1,5 +1,7 @@
 postgresql-common (191) UNRELEASED; urgency=medium
 
+  * PgCommon cluster_data_directory: Support clusters in and symlinked from
+    /etc/postgresql/.
   * t/170_extensions.t: Add dependencies of jsonb_pl{perl,python}.
 
  -- Christoph Berg <myon@debian.org>  Fri, 30 Mar 2018 18:16:37 +0200
